--- a/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
+++ b/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
@@ -2,7 +2,8 @@
   <mat-card-title class="h1 text-center mt-3">NFS-Cards</mat-card-title>
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="create()">Add NCF-Card</button>
-    <button mat-raised-button color="primary" class="mx-3">Export NCF-Cards</button>
+    <a mat-raised-button color="primary" class="mx-3" (click)="exportNfcCard()"
+            [href]="downloadJsonHref" download="nfcCards.json">Export NCF-Cards</a>
   </mat-card-actions>
   <mat-card-content>
     <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
