--- a/packing-frontend/src/app/admin/components/roles/roles.component.html
+++ b/packing-frontend/src/app/admin/components/roles/roles.component.html
@@ -2,7 +2,8 @@
   <mat-card-title class="h1 text-center mt-3">Roles</mat-card-title>
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="create()">Add Role</button>
-    <button mat-raised-button color="primary" class="mx-3">Export Roles</button>
+    <a mat-raised-button color="primary" class="mx-3" (click)="exportRole()"
+            [href]="downloadJsonHref" download="roles.json">Export Roles</a>
   </mat-card-actions>
 
   <mat-card-content class="shadow-sm">
