Corrected some errors

--- a/packing-frontend/src/app/admin/components/add-slot-dialog/add-slot-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-slot-dialog/add-slot-dialog.component.html
@@ -34,7 +34,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput formControlName="name" placeholder="Name of Floor" required>
+      <input matInput formControlName="name" placeholder="Name of Slot" required>
       <mat-error *ngIf="dialogForm.controls['name'].invalid">Name is required</mat-error>
     </mat-form-field>
 
