--- a/packing-frontend/src/app/admin/components/roles/roles.component.html
+++ b/packing-frontend/src/app/admin/components/roles/roles.component.html
@@ -1,51 +1,41 @@
+
 <mat-card class="shadow">
-  <mat-card-title class="h1 text-center mt-3">Roles</mat-card-title>
+  <mat-card-title class="text-center mt-3">Role</mat-card-title>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="create()">Add Role</button>
-    <a mat-raised-button color="primary" class="mx-3" (click)="exportRole()"
-            [href]="downloadJsonHref" download="roles.json">Export Roles</a>
+    <a mat-raised-button color="primary" (click)="exportRole()" class="btn m-3" title="Download JSON" [href]="downloadJsonHref"
+       download="roles.json">
+      <mat-icon>save_alt</mat-icon>
+      <span style="margin-left: 10px;">Export</span>
+    </a>
+    <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Role</button>
+    <mat-form-field appearance="fill">
+      <mat-label>Search Role</mat-label>
+      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchRole()"/>
+    </mat-form-field>
   </mat-card-actions>
-
-  <mat-card-content class="shadow-sm">
-    <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="updatedAt">
-        <th mat-header-cell *matHeaderCellDef>updatedAt</th>
-        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="edit(element)" color="primary">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button (click)="show(element)" color="primary">
-            <mat-icon>remove_red_eye</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+  <mat-card-content>
+    <mat-grid-list cols="4" rowHeight="230px" gutterSize="16px" class="building-grid">
+      <mat-grid-tile *ngFor="let role of pagedRoles">
+        <mat-card class="building-card border border-primary shadow">
+          <mat-card-title class="building-title mt-3">Role {{ role.id }}</mat-card-title>
+          <mat-card-content>
+            <p class="building-info">Name: {{ role.name }}</p>
+            <p class="building-info">Created At: {{ role.createdAt | date:'yyyy.MM.dd hh:mm:ss' }}</p>
+            <p class="building-info">Updated At: {{ role.updatedAt | date:'yyyy.MM.dd hh:mm:ss' }}</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-icon-button (click)="edit(role)" color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="show(role)" color="primary">
+              <mat-icon>visibility</mat-icon>
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+    <mat-paginator [pageSizeOptions]="[8,12,16]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
+
+
