--- a/packing-frontend/src/app/admin/components/reservations/reservations.component.html
+++ b/packing-frontend/src/app/admin/components/reservations/reservations.component.html
@@ -1,61 +1,41 @@
 <mat-card class="shadow">
-  <mat-card-title class="h1 text-center mt-3">Reservations</mat-card-title>
+  <mat-card-title class="text-center mt-3">Reservations</mat-card-title>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="create()">Add Reservation</button>
-    <a mat-raised-button color="primary" class="mx-3" (click)="exportReservation()"
-            [href]="downloadJsonHref" download="reservations.json">Export Reservations</a>
+    <a mat-raised-button color="primary" (click)="exportReservations()" class="btn m-3" title="Download JSON" [href]="downloadJsonHref"
+       download="reservations.json">
+      <mat-icon>save_alt</mat-icon>
+      <span style="margin-left: 10px;">Export</span>
+    </a>
+    <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Reservation</button>
+    <mat-form-field appearance="fill">
+      <mat-label>Search Reservation</mat-label>
+      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchReservations()"/>
+    </mat-form-field>
   </mat-card-actions>
-
-  <mat-card-content class="shadow-sm">
-    <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="user">
-        <th mat-header-cell *matHeaderCellDef>User</th>
-        <td mat-cell *matCellDef="let element">{{ element['user']['firstName']}} {{ element['user']['lastName']}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="reservationAt">
-        <th mat-header-cell *matHeaderCellDef>Reservation At</th>
-        <td mat-cell *matCellDef="let element">{{ element['reservationAt'] | date:'yyyy.MM.dd'}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="reservationPeriod">
-        <th mat-header-cell *matHeaderCellDef>Period</th>
-        <td mat-cell *matCellDef="let element">{{ element['reservationPeriod'] }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="updatedAt">
-        <th mat-header-cell *matHeaderCellDef>updatedAt</th>
-        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="edit(element)" color="primary">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button (click)="show(element)" color="primary">
-            <mat-icon>remove_red_eye</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+  <mat-card-content>
+    <mat-grid-list cols="4" rowHeight="290px" gutterSize="16px" class="building-grid">
+      <mat-grid-tile *ngFor="let reservation of pagedReservations">
+        <mat-card class="building-card border border-primary shadow">
+          <mat-card-title class="building-title mt-3">Reservation {{ reservation.id }}</mat-card-title>
+          <mat-card-content>
+<!--            <p class="building-info">User: {{reservation.user['fristName']}} {{reservation.user['lastName']}}</p>-->
+            <p class="building-info">Date: {{reservation['reservationAt'] | date:'yyyy.MM.dd'}}</p>
+            <p class="building-info">Period: {{reservation['reservationPeriod'] }}</p>
+            <p class="building-info">Slot: {{reservation['slot']['name'] }}</p>
+            <p class="building-info">Created At: {{ reservation['createdAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</p>
+            <p class="building-info">Updated At: {{ reservation['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-icon-button (click)="edit(reservation)" color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="show(reservation)" color="primary">
+              <mat-icon>visibility</mat-icon>
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+    <mat-paginator [pageSizeOptions]="[8,12,16]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
