--- a/packing-frontend/src/app/admin/components/users/users.component.html
+++ b/packing-frontend/src/app/admin/components/users/users.component.html
@@ -4,9 +4,9 @@
     <button mat-raised-button color="primary" (click)="create()">Add User</button>
     <a mat-raised-button color="primary" class="mx-3" (click)="exportUser()"
             [href]="downloadJsonHref" download="users.json">Export Users</a>
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+    <mat-form-field appearance="fill">
+      <mat-label>Search Reservation</mat-label>
+      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchUsers()"/>
     </mat-form-field>
   </mat-card-actions>
 
