--- a/packing-frontend/src/app/admin/components/floors/floors.component.html
+++ b/packing-frontend/src/app/admin/components/floors/floors.component.html
@@ -5,7 +5,7 @@
             [href]="downloadJsonHref" download="floors.json">Export Floors</a>
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Floor</button>
     <mat-form-field appearance="fill">
-      <mat-label>Search Building</mat-label>
+      <mat-label>Search Floor</mat-label>
       <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchFloors()"/>
     </mat-form-field>
   </mat-card-actions>
