--- a/packing-frontend/src/app/admin/components/parks/parks.component.html
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.html
@@ -8,7 +8,7 @@
     </a>
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Park</button>
     <mat-form-field appearance="fill">
-      <mat-label>Search Building</mat-label>
+      <mat-label>Search Park</mat-label>
       <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchParks()"/>
     </mat-form-field>
   </mat-card-actions>
