--- a/packing-frontend/src/app/admin/components/slots/slots.component.html
+++ b/packing-frontend/src/app/admin/components/slots/slots.component.html
@@ -5,7 +5,7 @@
             [href]="downloadJsonHref" download="slots.json">Export Slots</a>
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Slot</button>
     <mat-form-field appearance="fill">
-      <mat-label>Search Building</mat-label>
+      <mat-label>Search Slots</mat-label>
       <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchSlots()" />
     </mat-form-field>
   </mat-card-actions>
