--- a/packing-frontend/src/app/admin/components/add-reservation-dialog/add-reservation-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-reservation-dialog/add-reservation-dialog.component.html
@@ -44,7 +44,7 @@
 
     <mat-form-field>
       <mat-label>Date of reservation</mat-label>
-      <input matInput [matDatepicker]="datepicker" formControlName="date" placeholder="Date of reservation">
+      <input matInput [min]="minDate" [matDatepicker]="datepicker" formControlName="date" placeholder="Date of reservation">
       <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
       <mat-datepicker #datepicker></mat-datepicker>
       <mat-error *ngIf="dialogForm.controls['date'].invalid">Date is required</mat-error>
