--- a/packing-frontend/src/app/user/components/reservation-dialog/reservation-dialog.component.html
+++ b/packing-frontend/src/app/user/components/reservation-dialog/reservation-dialog.component.html
@@ -28,7 +28,7 @@
 
   <mat-form-field class="example-form-field">
     <mat-label>Choose a date</mat-label>
-    <input
+    <input [disabled]="isEnabled"
       matInput
       [matDatepicker]="datepicker"
       [(ngModel)]="date"
@@ -42,10 +42,10 @@
     <mat-datepicker #datepicker></mat-datepicker>
   </mat-form-field>
 
-  <section class="example-section" matInput [(ngModel)]="period">
+<!--  <section class="example-section" matInput [(ngModel)]="period">
     <mat-checkbox value="0">Morning</mat-checkbox>
     <mat-checkbox value="1">Afternoon</mat-checkbox>
-  </section>
+  </section>-->
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
