--- a/packing-frontend/src/app/user/components/user-dashboard/user-dashboard.component.html
+++ b/packing-frontend/src/app/user/components/user-dashboard/user-dashboard.component.html
@@ -35,8 +35,8 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="edit(element)" color="primary">
-            <mat-icon>edit</mat-icon>
+          <button mat-icon-button (click)="cancelReservation(element)" color="primary">
+            <mat-icon>cancel</mat-icon>
           </button>
           <button mat-icon-button (click)="show(element)" color="primary">
             <mat-icon>remove_red_eye</mat-icon>
