--- a/packing-frontend/src/app/admin/components/users/users.component.html
+++ b/packing-frontend/src/app/admin/components/users/users.component.html
@@ -19,7 +19,7 @@
           <mat-card-content>
             <p class="building-info">Name: {{ user.firstName }} {{ user.lastName }}</p>
             <p class="building-info">Email: {{ user.email }} </p>
-            <p class="building-info">Email: {{ user.gender }} </p>
+            <p class="building-info">Gender: {{ user.gender }} </p>
             <p class="building-info">Created At: {{ user.createdAt | date:'yyyy.MM.dd hh:mm:ss' }}</p>
             <p class="building-info">Updated At: {{ user.updatedAt | date:'yyyy.MM.dd hh:mm:ss' }}</p>
           </mat-card-content>
