--- a/packing-frontend/src/app/user/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/packing-frontend/src/app/user/components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,4 @@
-<p>confirmation-dialog works!</p>
+<h1 class="text-center text-primary">Warning</h1>
 <h2 mat-dialog-title>Confirmation</h2>
 <mat-dialog-content>
   <p>{{ data }}</p>
